--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="quote-container" id="quote-container">
+        <!-- Dark Mode Switch -->
+        <div class="theme-switch-wrapper" id="theme-switch-wrapper" hidden>
+            <span id="toggle-icon">
+                <span class="toggle-text">Light Mode</span>
+                <i class="fa-solid fa-sun"></i>
+            </span>
+            <label class="theme-switch">
+                <input type="checkbox">
+                <div class="slider round"></div>
+            </label>
+        </div>    
+        <div class="quote-container" id="quote-container">
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
@@ -31,10 +42,11 @@
             <button id="same-author">Get Quote by Same Author</button>
             <button id="same-tag">Get Similar Quote</button>
         </div>
-    </div>
+        </div>
     <!-- Loader -->
     <div class="loader" id="loader"></div>
     <!-- Script -->
+    <script src="dark-mode.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
